add fisher folk shortcut, change forge lever position, add collectables, change lava, change forge puzzle material, add lighthouse activation

--- a/LD_IMPLEMENTATION/Config/DefaultEngine.ini
+++ b/LD_IMPLEMENTATION/Config/DefaultEngine.ini
@@ -59,7 +59,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_TinyIslands/Maps/Actors_Gym.Actors_Gym
+EditorStartupMap=/Game/Team_6/MainLevel.MainLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -68,7 +68,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/_TinyIslands/Maps/Actors_Gym.Actors_Gym
+GameDefaultMap=/Game/Team_6/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/_TinyIslands/GameModes/GM_Island.GM_Island_C
 GlobalDefaultServerGameMode=None
