--- a/LD_IMPLEMENTATION/Config/DefaultGame.ini
+++ b/LD_IMPLEMENTATION/Config/DefaultGame.ini
@@ -9,4 +9,5 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildTarget=./Build
 FullRebuild=True
+BuildConfiguration=PPBC_Development
 
